Fix word-break on code blocks

--- a/_sass/ui/elements/_code.sass
+++ b/_sass/ui/elements/_code.sass
@@ -26,8 +26,7 @@ pre.highlight, .highlight pre
 
   // Typography
   white-space: pre-wrap
-  word-break: break-all
-
+  word-break: break-word
 
 // Border
 *:not(code).highlight
